--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <title>Notebook nation</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/uikit.min.css">
-    <link rel="stylesheet" href="css/app.min.css">
-</head>
-
+ <head>
+        <title>Title</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/uikit.min.css" />
+        <link rel="stylesheet" href="css/app.min.css" />
+    </head>
 <body>
     <nav class="uk-navbar-container uk-navbar-transparent uk-margin uk-padding-small" uk-navbar="mode: click">
         <div class="uk-navbar-left uk-margin-xlarge-left">
@@ -47,7 +45,7 @@
                 </div>
                 <div>
                     <p>
-                        <div uk-slider>
+                        <div uk-slider="autoplay:true;autoplay-interval: 5000">
                             <div class="uk-position-relative">
                                 <div class="uk-slider-container uk-light">
                                     <ul class="uk-slider-items uk-child-width-1-1 uk-child-width-1-1@s uk-child-width-1-1@m">
@@ -59,12 +57,13 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <div class="uk-hidden@s uk-light">
-                                    <a class="uk-position-center-left uk-position-small" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-                                    <a class="uk-position-center-right uk-position-small" href="#" uk-slidenav-next uk-slider-item="next"></a>
-                                </div>
+                                <!--  <div class="uk-hidden@s uk-light">
+<a class="uk-position-center-left uk-position-small" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+<a class="uk-position-center-right uk-position-small" href="#" uk-slidenav-next uk-slider-item="next"></a>
+</div> -->
                             </div>
-                            <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
+                            <!--                             <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
+-->
                         </div>
                     </p>
                 </div>
@@ -73,9 +72,41 @@
     </div>
     <div class="uk-container">
         <div class="uk-section">
+            <div class="uk-text-emphasis uk-text-middle uk-text-bold">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis ex accusamus nostrum, id itaque! Saepe culpa illum et quisquam ratione.
+            </div>
+            <h2 class="uk-text-center highlight-bottom uk-text-uppercase uk-text-bold uk-margin-medium-bottom">Upcoming events
+            </h2>
+            <!-- UPCOMING EVENTS -->
+            <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid uk-grid uk-scrollspy="cls: uk-animation-slide-right-small; repeat: true">
+                <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
+                    <img data-src="assets/girl.jpg" alt="" uk-cover uk-img>
+                    <canvas width="600" height="400"></canvas>
+                </div>
+                <div>
+                    <div class="uk-card-body">
+                        <h2 class="uk-heading-line"><span>KHOJ - The Secret Writer</span></h2>
+                        <article class="uk-article">
+                            <p class="uk-article-meta">Written by <a href="#">Notebook Nation</a> on 1 JUNE 2020. Posted in <a href="#">Blog</a></p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <div class="uk-grid-small uk-child-width-auto" uk-grid>
+                                <div>
+                                    <a class="uk-button uk-button-text" href="#">Read more</a>
+                                </div>
+                                <div>
+                                    <a class="uk-button uk-button-text" href="#">Previous events</a>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
             <h2 class="uk-text-center highlight-bottom uk-text-uppercase uk-text-bold">Our vision
             </h2>
-            <h5>To Create a Platform Where Students & Working Professional With Fresh ideas and Renewed Energies can Compete to bring out the best in them. We also render Social Education to Masses.</h5>
+            <h5>
+                <blockquote class="uk-margin-large-right uk-margin-large-left">
+                    <q>To Create a Platform Where Students & Working Professional With Fresh ideas and Renewed Energies can Compete to bring out the best in them. We also render Social Education to Masses.</q></blockquote>
+            </h5>
             <!-- WHY US -->
             <h2 class="uk-text-center highlight-bottom uk-text-uppercase uk-text-bold">Why us ?
             </h2>
@@ -134,33 +165,99 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="uk-section">
-                <h2 class="uk-text-center highlight-bottom uk-text-uppercase uk-text-bold uk-margin-medium-bottom">Upcoming events
-                </h2>
-                <!-- UPCOMING EVENTS -->
-                <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid uk-grid uk-scrollspy="cls: uk-animation-slide-right-small; repeat: true">
-                    <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
-                        <img data-src="assets/girl.jpg" alt="" uk-cover uk-img>
-                        <canvas width="600" height="400"></canvas>
-                    </div>
-                    <div>
-                        <div class="uk-card-body">
-                            <h2 class="uk-heading-line"><span>KHOJ - The Secret Writer</span></h2>
-                            <article class="uk-article">
-                                <p class="uk-article-meta">Written by <a href="#">Notebook Nation</a> on 1 JUNE 2020. Posted in <a href="#">Blog</a></p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                                <div class="uk-grid-small uk-child-width-auto" uk-grid>
-                                    <div>
-                                        <a class="uk-button uk-button-text" href="#">Read more</a>
-                                    </div>
-                                    <!--  <div>
-                                        <a class="uk-button uk-button-text" href="#">5 Comments</a>
-                                    </div> -->
-                                </div>
-                            </article>
+                <h2 class="uk-text-center highlight-bottom uk-text-uppercase uk-text-bold uk-margin-medium-bottom">Join us</h2>
+                <div class="uk-card uk-card-default uk-card-body nn-yellow-light uk-border-rounded uk-text-emphasi" uk-scrollspy="cls:uk-animation-slide-top-medium;">
+                    <div class="uk-grid-match uk-child-width-expand@s uk-text-center uk-grid-divider dashed uk-grid-collapse" uk-grid>
+                        <div>
+                            <div>
+                                <h3 class="uk-text-uppercase">Internship</h3>
+                                <button class="uk-button uk-button-default nn-button">Join now</button>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <h3 class="uk-text-uppercase">Web development</h3>
+                                <button class="uk-button uk-button-default nn-button">Join now</button>
+                            </div>
                         </div>
                     </div>
+                </div>
+                <!-- TESTIMONIALS -->
+                <h2 class="uk-text-center highlight-bottom uk-text-uppercase uk-text-bold uk-margin-medium-bottom">Testimonials
+                </h2>
+                <div uk-slider="center: true">
+                    <div class="uk-position-relative uk-visible-toggle" tabindex="-1">
+                        <ul class="uk-slider-items uk-child-width-1-1@s uk-child-width-1-2@m uk-grid uk-grid-match nn-testimonials">
+                            <li>
+                                <article>
+                                    <div class="uk-card uk-card-body uk-text-emphasis">
+                                        <div class="uk-text-center">
+                                            <img class="uk-border-circle nn-testimonial-pic" src="assets/uploads/nn-kumari-shubham.jpg" alt="">
+                                        </div>
+                                        <blockquote cite="#">
+                                            <p class="uk-margin-small-bottom uk-text-emphasis">Reality check - I got to know that there are so many people out there to support creative skills...the voting round was awesome and my family and friends enjoyed it a lot. This was my first attempt to share my passion for writing with such a huge audience and the experience was worthwhile. Thanks for providing the platform #khoj 1.0</p>
+                                            <footer>Kumari Shubham in <cite><a href="#">Notebook Nation</a></cite></footer>
+                                        </blockquote>
+                                    </div>
+                                </article>
+                            </li>
+                            <li>
+                                <article>
+                                    <div class="uk-card uk-card-body uk-text-emphasis">
+                                        <div class="uk-text-center">
+                                            <img class="uk-border-circle nn-testimonial-pic" src="assets/uploads/nn-bhavishya-yaduvanshi.jpg" alt="">
+                                        </div>
+                                        <blockquote cite="#">
+                                            <p class="uk-margin-small-bottom uk-text-emphasis">It's an honor for me to grab a spot among the top notch writers. It's going to do wonders to my confidence whenever I compete next time. In this cut-throat competition, it's a great accomplishment that I was able to make a mark and make my presence among distinguished writers from deemed institutions.</p>
+                                            <footer>Bhavishya Yaduvanshi in <cite><a href="#">Notebook Nation</a></cite></footer>
+                                        </blockquote>
+                                    </div>
+                                </article>
+                            </li>
+                            <li>
+                                <article>
+                                    <div class="uk-card uk-card-body uk-text-emphasis">
+                                        <div class="uk-text-center">
+                                            <img class="uk-border-circle nn-testimonial-pic" src="assets/uploads/nn-vasu-golyan.jpg" alt="">
+                                        </div>
+                                        <blockquote cite="#">
+                                            <p class="uk-margin-small-bottom uk-text-emphasis">It was a wonderful competition, organised in great spirits by the team at Notebook Nation. My heartiest congratulations to them for pulling off such a successful event, with such great participation and community engagement, amidst everything that has been going on.</p>
+                                            <footer>Vasu Golyan in <cite><a href="#">Notebook Nation</a></cite></footer>
+                                        </blockquote>
+                                    </div>
+                                </article>
+                            </li>
+                            <li>
+                                <article>
+                                    <div class="uk-card uk-card-body uk-text-emphasis">
+                                        <div class="uk-text-center">
+                                            <img class="uk-border-circle nn-testimonial-pic" src="assets/uploads/nn-taranjyout-singh.jpg" alt="">
+                                        </div>
+                                        <blockquote cite="#">
+                                            <p class="uk-margin-small-bottom uk-text-emphasis">I had a very good experience in this competition. Because the type of competition I prefer ie. Content based. And number of participants were also shown to know if I won or even if I had lost I got to know the number with which I was competing.</p>
+                                            <footer>Taran Jyot Singh in <cite><a href="#">Notebook Nation</a></cite></footer>
+                                        </blockquote>
+                                    </div>
+                                </article>
+                            </li>
+                            <li>
+                                <article>
+                                    <div class="uk-card uk-card-body uk-text-emphasis">
+                                        <div class="uk-text-center">
+                                            <img class="uk-border-circle nn-testimonial-pic" src="assets/uploads/nn-ankit-kumar.jpg" alt="">
+                                        </div>
+                                        <blockquote cite="#">
+                                            <p class="uk-margin-small-bottom uk-text-emphasis">I felt great when I saw that all the hardwork and the efforts that I had put for writing the article was being recognized and praised. I am also cherished to know that so many people liked my written piece, crossing double century. And I would also like to thank all those who supported me and made this entry to the top 3.</p>
+                                            <footer>Ankit Kumar in <cite><a href="#">Notebook Nation</a></cite></footer>
+                                        </blockquote>
+                                    </div>
+                                </article>
+                            </li>
+                        </ul>
+                        <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+                        <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+                    </div>
+                    <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
                 </div>
             </div>
         </div>
@@ -215,7 +312,7 @@
                                     <select>
                                         <option value="">English</option>
                                         <!--  <option value="1">Hindi</option>
-                                        <option value="2">Urdu</option> -->
+<option value="2">Urdu</option> -->
                                     </select>
                                     <button class="uk-button uk-button-default" type="button" tabindex="-1">
                                         <span></span>
@@ -232,10 +329,11 @@
     <div class="footer-copyright">
         © Notebook Nation 2020
     </div>
-    <a class="scroll-top nn-button uk-icon-button" href="#" uk-scroll=""uk-totop=""></a>
+    <a class="scroll-top nn-button uk-icon-button" href="#" uk-scroll="" uk-totop=""></a>
     <script src="js/components.js"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.js"></script>
 </body>
+
 </html>
