--- a/blog-content.html
+++ b/blog-content.html
@@ -13,6 +13,7 @@
 <body>
     <script>
     NotebookNation.add.navbar();
+    NotebookNation.add.mobileNavbar();
     </script>
     <div class="uk-container">
         <div class="uk-section uk-padding-remove-top">
